--- a/view/blog/spring/spring-framework/Bean的生命周期.html
+++ b/view/blog/spring/spring-framework/Bean的生命周期.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprival</title>
+    <title>Blog</title>
 
     <style>
         /* 基础样式与变量定义 */
@@ -790,81 +790,176 @@
         <!-- 左侧Logo -->
         <div class="flex items-center space-x-4">
             <a href="#" class="logo">
-                <span>SPRIVAL</span>
+                <span>Blog</span>
             </a>
         </div>
 
         <!-- 中间导航链接 -->
         <nav class="md:flex items-center space-x-6">
+
         </nav>
 
         <!-- 右侧功能区 -->
         <div class="flex items-center space-x-4">
-            <a href="/sprdoc/blog_index.html" class="nav-link active">Blog</a>
-            <a href="https://github.com/soyokra/sprival" class="nav-link active">Github</a>
+            <a href="/sprdoc/index.html" class="nav-link active">Sprival</a>
         </div>
     </div>
 </header>
-
-<!-- 左侧固定章节导航 - 始终显示 -->
-<aside id="left-sidebar" class="overflow-y-auto scrollbar-hide">
-    <div class="p-4">
-        <h2 class="chapter-title mb-4">Sprival</h2>
-        <nav class="space-y-1">
-            <a href="/sprdoc/view/sprival/README.html" class="chapter-link">
-                <span>快速开始</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-server/README.html" class="chapter-link">
-                <span>HTTP 服务端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-client/README.html" class="chapter-link">
-                <span>HTTP 客户端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-mysql/README.html" class="chapter-link">
-                <span>数据库</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-rabbit/README.html" class="chapter-link">
-                <span>RabbitMQ</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-kafka/README.html" class="chapter-link">
-                <span>Kafka</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-mongo/README.html" class="chapter-link">
-                <span>MongoDB</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-ealsticsearch/README.html" class="chapter-link">
-                <span>Elasticsearch</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-clickhouse/README.html" class="chapter-link">
-                <span>Clickhouse</span>
-            </a>
-        </nav>
-    </div>
-</aside>
 
 <!-- 主内容区 -->
 <main class="main-content">
     <div class="container max-w-4xl">
         <article class="markdown-content bg-white rounded-lg shadow p-6 md:p-8">
-            <h1>快速开始</h1>
+            <h2>Bean的生命周期</h2>
+<p>广义的Bean的生命周期包含三个部分：MultiDefinition，BeanDefinition，Bean。两个步骤：注册BeanDefinition，注册Bean</p>
+<h4>MultiDefinition</h4>
+<p>Bean本质是一个实例化的对象，要实例化出一个对象，首先要有模板，这个模板就是类或者接口。
+其次要有如何实例化的描述信息，这种描述信息主要是以xml形式或者注解形式生成。</p>
+<h4>BeanDefinition</h4>
+<p>BeanDefinition是标准化后的Bean如何实例化的描述信息，由于初始的实例化的描述信息的形式多样，需要一个标准化的中间产物，方便后续处理</p>
+<h4>Bean</h4>
+<p>Bean就是根据BeanDefinition使用反射的方式实例化的对象</p>
+<p><img alt="Bean的生命周期" src="src/bean_lifecycle_001.png" /></p>
+<h2>MultiDefinition</h2>
+<h4>xml方式</h4>
+<pre><code class="language-xml">&lt;bean id=&quot;myBean&quot; 
+      class=&quot;com.example.MyClass&quot; 
+      scope=&quot;singleton&quot; 
+      factory-method=&quot;createInstance&quot; 
+      factory-bean=&quot;myFactoryBean&quot; 
+      init-method=&quot;init&quot; 
+      destroy-method=&quot;cleanup&quot; 
+      autowire=&quot;byType&quot; 
+      dependency-check=&quot;all&quot; 
+      lazy-init=&quot;true&quot; 
+      primary=&quot;true&quot; 
+      abstract=&quot;false&quot; 
+      abstract=&quot;true&quot;&gt;
+
+    &lt;property name=&quot;propertyName&quot; value=&quot;propertyValue&quot;/&gt;
+    &lt;property name=&quot;anotherProperty&quot; ref=&quot;anotherBean&quot;/&gt;
+
+    &lt;constructor-arg index=&quot;0&quot; value=&quot;constructorValue&quot;/&gt;
+    &lt;constructor-arg index=&quot;1&quot; ref=&quot;anotherBean&quot;/&gt;
+
+    &lt;qualifier value=&quot;specificBean&quot;/&gt;
+    &lt;lookup-method method=&quot;getBean&quot; bean=&quot;myBean&quot;/&gt;
+&lt;/bean&gt;
+</code></pre>
+<p>属性说明
+* id: Bean 的唯一标识符。
+* class: Bean 的全限定类名。
+* scope: Bean 的作用域，常见值包括 singleton（单例）、prototype（原型）。
+* factory-method: 指定一个静态工厂方法用于创建 Bean。
+* factory-bean: 指定工厂 Bean 的 ID。
+* init-method: 指定初始化方法。
+* destroy-method: 指定销毁方法。
+* autowire: 自动装配方式，常见值包括 byType、byName、constructor，或 no。
+* dependency-check: 指定依赖检查的级别，可以是 none、all、simple。
+* lazy-init: 是否延迟初始化，true 表示延迟，false 表示立即初始化。
+* primary: 是否为主要 Bean，true 表示是。
+* abstract: 如果设置为 true，则该 Bean 不能被实例化，只能作为其他 Bean 的基类。</p>
+<p>子标签
+* <property>: 用于设置 Bean 的属性。
+* <constructor-arg>: 用于设置构造函数参数。
+* <qualifier>: 用于指定具体的 Bean 名称，通常与 @Autowired 一起使用。
+* <lookup-method>: 定义一个查找方法，Spring 会在运行时为该方法返回一个 Bean。</p>
+<h4>注解方式</h4>
+<pre><code class="language-java">import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Primary;
+import org.springframework.context.annotation.Scope;
+
+@Configuration
+public class AppConfig {
+
+  @Bean
+  @Primary
+  @Scope
+  public MyClass myBean() {
+    MyClass myClass = new MyClass();
+    myClass.setPropertyName(&quot;propertyValue&quot;);
+    return myClass;
+  }
+}
+</code></pre>
+<p>@Bean注解的属性</p>
+<pre><code class="language-java">
+@Target({ElementType.METHOD, ElementType.ANNOTATION_TYPE})
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+public @interface Bean {
+    @AliasFor(&quot;name&quot;)
+    String[] value() default {};
+
+    @AliasFor(&quot;value&quot;)
+    String[] name() default {};
+
+    @Deprecated
+    Autowire autowire() default Autowire.NO;
+
+    boolean autowireCandidate() default true;
+
+    String initMethod() default &quot;&quot;;
+
+    String destroyMethod() default AbstractBeanDefinition.INFER_METHOD;
+}
+
+</code></pre>
+<p>属性说明
+* value：等同于下面的name属性
+* name：相当于bean的id
+* autowire：标志是否是一个引用的 Bean 对象
+* autowireCandidate：是否作为其他对象注入时候的候选Bean
+* initMethod：自定义初始化方法
+* destroyMethod：自定义销毁方法</p>
+<p>注解的方式包括如下</p>
+<ul>
+<li>@Component注解(@Repository, @Service, @Controller, @Configuration) + @ComponentScan</li>
+<li>@Import注解，@ImportSource注解，ImportSelect接口</li>
+</ul>
+<h2>BeanDefinition</h2>
+<p>BeanDefinition是一个接口，实际上可能有多种BeanDefinition类：
+- RootBeanDefinition
+   - AbstractBeanDefinition
+      - BeanMetadataAttributeAccessor
+      - BeanDefinition
+         - AttributeAccessor
+         - BeanMetadataElement
+- AnnotatedGenericBeanDefinition
+   - GenericBeanDefinition
+      - AbstractBeanDefinition
+   - AnnotatedBeanDefinition
+      - BeanDefinition
+- ChildBeanDefinition
+   - AbstractBeanDefinition
+- ScannedGenericBeanDefinition
+   - GenericBeanDefinition
+   - AnnotatedBeanDefinition</p>
+<p>注解类型的类和接口是通过执行BeanDefinitionRegistryPostProcessor接口的postProcessBeanDefinitionRegistry方法注册
+的，核心实现类如下</p>
+<ul>
+<li>ConfigurationClassPostProcessor</li>
+<li>ConfigurationClass</li>
+<li>ConfigurationClassBeanDefinitionReader</li>
+</ul>
+<p>执行顺序上，
+1. 扫描启动对象sprivalApplication的基础目录下所有@Component注解的类，转化为ConfigurationClass对象
+2. 处理@Import和ImportSelector接口的类，转化为ConfigurationClass对象
+3. 处理ConfigurationClass注册BeanDefinition</p>
+<p>执行过程中有递归法，会扫描出100多个ConfigurationClass对象</p>
+<h2>Bean</h2>
+<p><img alt="Bean初始化阶段" src="src/bean_lifecycle_002.png" /></p>
+<p>https://www.processon.com/view/617febcbe0b34d1a7ea5405b</p>
+<p>三级缓存：
+一级缓存（singletonObjects）
+二级缓存（singletonFactories）
+三级缓存（earlySingletonObjects）</p>
         </article>
     </div>
 </main>
 
-<!-- 右侧悬浮二级标题导航 - 始终显示 -->
-<!--  <aside id="right-sidebar" class="scrollbar-hide">-->
-<!--    <h3 class="toc-title">目录导航</h3>-->
-<!--    <nav class="toc-nav space-y-1">-->
-<!--      <a href="/sprdoc/view/sprival/README.html" class="toc-link">1. 快速开始</a>-->
-<!--      <a href="#section-1-1" class="toc-link toc-level-2">1.1 Web开发的定义与重要性</a>-->
-<!--      <a href="/sprdoc/view/sprival/spring-myql/README.html" class="toc-link">2. 数据库</a>-->
-<!--    </nav>-->
-<!--  </aside>-->
 
 <script>
     // 元素获取
