--- a/view/blog/spring/spring-framework/src/Application.createApplicationContext.html
+++ b/view/blog/spring/spring-framework/src/Application.createApplicationContext.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprival</title>
+    <title>Blog</title>
 
     <style>
         /* 基础样式与变量定义 */
@@ -790,81 +790,209 @@
         <!-- 左侧Logo -->
         <div class="flex items-center space-x-4">
             <a href="#" class="logo">
-                <span>SPRIVAL</span>
+                <span>Blog</span>
             </a>
         </div>
 
         <!-- 中间导航链接 -->
         <nav class="md:flex items-center space-x-6">
+
         </nav>
 
         <!-- 右侧功能区 -->
         <div class="flex items-center space-x-4">
-            <a href="/sprdoc/blog_index.html" class="nav-link active">Blog</a>
-            <a href="https://github.com/soyokra/sprival" class="nav-link active">Github</a>
+            <a href="/sprdoc/index.html" class="nav-link active">Sprival</a>
         </div>
     </div>
 </header>
-
-<!-- 左侧固定章节导航 - 始终显示 -->
-<aside id="left-sidebar" class="overflow-y-auto scrollbar-hide">
-    <div class="p-4">
-        <h2 class="chapter-title mb-4">Sprival</h2>
-        <nav class="space-y-1">
-            <a href="/sprdoc/view/sprival/README.html" class="chapter-link">
-                <span>快速开始</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-server/README.html" class="chapter-link">
-                <span>HTTP 服务端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-client/README.html" class="chapter-link">
-                <span>HTTP 客户端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-mysql/README.html" class="chapter-link">
-                <span>数据库</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-rabbit/README.html" class="chapter-link">
-                <span>RabbitMQ</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-kafka/README.html" class="chapter-link">
-                <span>Kafka</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-mongo/README.html" class="chapter-link">
-                <span>MongoDB</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-ealsticsearch/README.html" class="chapter-link">
-                <span>Elasticsearch</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-clickhouse/README.html" class="chapter-link">
-                <span>Clickhouse</span>
-            </a>
-        </nav>
-    </div>
-</aside>
 
 <!-- 主内容区 -->
 <main class="main-content">
     <div class="container max-w-4xl">
         <article class="markdown-content bg-white rounded-lg shadow p-6 md:p-8">
-            <h1>快速开始</h1>
+            <h2>简介</h2>
+<p>createApplicationContext方法主要功能是为了实例化一个Context</p>
+<p>实际上的Context实例是AnnotationConfigServletWebServerApplicationContext这个类的实例</p>
+<p>同时在构造方法设置了对象属性</p>
+<p>实例化AnnotatedBeanDefinitionReader类作为reader属性</p>
+<p>实例化ClassPathBeanDefinitionScanner作为scanner属性</p>
+<p>获取的AppClassLoader作为classLoader属性</p>
+<p>实例化DefaultListableBeanFactory作为beanFactory属性</p>
+<h2>源码分析</h2>
+<p>servlet应用类型创建的context是AnnotationConfigServletWebServerApplicationContext</p>
+<pre><code class="language-java">public class SpringApplication {
+    protected ConfigurableApplicationContext createApplicationContext() {
+        Class&lt;?&gt; contextClass = this.applicationContextClass;
+        if (contextClass == null) {
+            try {
+                switch (this.webApplicationType) {
+                    case SERVLET:
+                        contextClass = Class.forName(DEFAULT_SERVLET_WEB_CONTEXT_CLASS);
+                        break;
+                    case REACTIVE:
+                        contextClass = Class.forName(DEFAULT_REACTIVE_WEB_CONTEXT_CLASS);
+                        break;
+                    default:
+                        contextClass = Class.forName(DEFAULT_CONTEXT_CLASS);
+                }
+            }
+            catch (ClassNotFoundException ex) {
+                throw new IllegalStateException(
+                        &quot;Unable create a default ApplicationContext, please specify an ApplicationContextClass&quot;, ex);
+            }
+        }
+        return (ConfigurableApplicationContext) BeanUtils.instantiateClass(contextClass);
+    }
+}
+</code></pre>
+<p>使用BeanUtils.instantiateClass方法，主要是通过反射机制实例化指定类的对象</p>
+<pre><code class="language-text">(ConfigurableApplicationContext) BeanUtils.instantiateClass(Class.forName(DEFAULT_SERVLET_WEB_CONTEXT_CLASS));
+</code></pre>
+<p>经过链路</p>
+<pre><code class="language-text">&lt;init&gt;:73, AnnotationConfigServletWebServerApplicationContext (org.springframework.boot.web.servlet.context)
+newInstance0:-1, NativeConstructorAccessorImpl (sun.reflect)
+newInstance:62, NativeConstructorAccessorImpl (sun.reflect)
+newInstance:45, DelegatingConstructorAccessorImpl (sun.reflect)
+newInstance:423, Constructor (java.lang.reflect)
+instantiateClass:204, BeanUtils (org.springframework.beans)
+instantiateClass:139, BeanUtils (org.springframework.beans)
+instantiateClass:204, BeanUtils (org.springframework.beans)
+instantiateClass:139, BeanUtils (org.springframework.beans)
+</code></pre>
+<p>调用了AnnotationConfigServletWebServerApplicationContext的构造方法，初始化reader和scanner</p>
+<pre><code class="language-java">public class AnnotationConfigServletWebServerApplicationContext extends ServletWebServerApplicationContext
+        implements AnnotationConfigRegistry {
+    public AnnotationConfigServletWebServerApplicationContext() {
+        this.reader = new AnnotatedBeanDefinitionReader(this);
+        this.scanner = new ClassPathBeanDefinitionScanner(this);
+    }
+}
+</code></pre>
+<p>默认会先调用父类的无参构造方法，初始化了类加载器(classLoader)，类加载器使用的是AppClassLoader；bean工厂(beanFactory)，bean工厂使用的是DefaultListableBeanFactory</p>
+<pre><code class="language-java">
+public class GenericApplicationContext extends AbstractApplicationContext implements BeanDefinitionRegistry {
+    public GenericApplicationContext() {
+        this.beanFactory = new DefaultListableBeanFactory();
+    }
+}
+
+public abstract class AbstractApplicationContext extends DefaultResourceLoader
+        implements ConfigurableApplicationContext {
+    public AbstractApplicationContext() {
+        this.resourcePatternResolver = getResourcePatternResolver();
+    }
+}
+
+public class DefaultResourceLoader implements ResourceLoader {
+    public DefaultResourceLoader() {
+        this.classLoader = ClassUtils.getDefaultClassLoader();
+    }
+}
+
+</code></pre>
+<p>实例化AnnotatedBeanDefinitionReader，调用构造方法</p>
+<pre><code class="language-java">public class AnnotatedBeanDefinitionReader {
+    public AnnotatedBeanDefinitionReader(BeanDefinitionRegistry registry) {
+        this(registry, getOrCreateEnvironment(registry));
+    }
+
+    public AnnotatedBeanDefinitionReader(BeanDefinitionRegistry registry, Environment environment) {
+        Assert.notNull(registry, &quot;BeanDefinitionRegistry must not be null&quot;);
+        Assert.notNull(environment, &quot;Environment must not be null&quot;);
+        this.registry = registry;
+        this.conditionEvaluator = new ConditionEvaluator(registry, environment, null);
+        AnnotationConfigUtils.registerAnnotationConfigProcessors(this.registry);
+    }
+}
+</code></pre>
+<p>调用到AnnotationConfigUtils的registerAnnotationConfigProcessors，通过 registry.registerBeanDefinition(beanName, definition)注册了5个RootBeanDefinition到
+AnnotationConfigServletWebServerApplicationContext</p>
+<pre><code class="language-java">public abstract class AnnotationConfigUtils {
+    public static Set&lt;BeanDefinitionHolder&gt; registerAnnotationConfigProcessors(
+            BeanDefinitionRegistry registry, @Nullable Object source) {
+
+        DefaultListableBeanFactory beanFactory = unwrapDefaultListableBeanFactory(registry);
+        if (beanFactory != null) {
+            if (!(beanFactory.getDependencyComparator() instanceof AnnotationAwareOrderComparator)) {
+                beanFactory.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
+            }
+            if (!(beanFactory.getAutowireCandidateResolver() instanceof ContextAnnotationAutowireCandidateResolver)) {
+                beanFactory.setAutowireCandidateResolver(new ContextAnnotationAutowireCandidateResolver());
+            }
+        }
+
+        Set&lt;BeanDefinitionHolder&gt; beanDefs = new LinkedHashSet&lt;&gt;(8);
+
+        if (!registry.containsBeanDefinition(CONFIGURATION_ANNOTATION_PROCESSOR_BEAN_NAME)) {
+            RootBeanDefinition def = new RootBeanDefinition(ConfigurationClassPostProcessor.class);
+            def.setSource(source);
+            beanDefs.add(registerPostProcessor(registry, def, CONFIGURATION_ANNOTATION_PROCESSOR_BEAN_NAME));
+        }
+
+        if (!registry.containsBeanDefinition(AUTOWIRED_ANNOTATION_PROCESSOR_BEAN_NAME)) {
+            RootBeanDefinition def = new RootBeanDefinition(AutowiredAnnotationBeanPostProcessor.class);
+            def.setSource(source);
+            beanDefs.add(registerPostProcessor(registry, def, AUTOWIRED_ANNOTATION_PROCESSOR_BEAN_NAME));
+        }
+
+        // Check for JSR-250 support, and if present add the CommonAnnotationBeanPostProcessor.
+        if (jsr250Present &amp;&amp; !registry.containsBeanDefinition(COMMON_ANNOTATION_PROCESSOR_BEAN_NAME)) {
+            RootBeanDefinition def = new RootBeanDefinition(CommonAnnotationBeanPostProcessor.class);
+            def.setSource(source);
+            beanDefs.add(registerPostProcessor(registry, def, COMMON_ANNOTATION_PROCESSOR_BEAN_NAME));
+        }
+
+        // Check for JPA support, and if present add the PersistenceAnnotationBeanPostProcessor.
+        if (jpaPresent &amp;&amp; !registry.containsBeanDefinition(PERSISTENCE_ANNOTATION_PROCESSOR_BEAN_NAME)) {
+            RootBeanDefinition def = new RootBeanDefinition();
+            try {
+                def.setBeanClass(ClassUtils.forName(PERSISTENCE_ANNOTATION_PROCESSOR_CLASS_NAME,
+                        AnnotationConfigUtils.class.getClassLoader()));
+            }
+            catch (ClassNotFoundException ex) {
+                throw new IllegalStateException(
+                        &quot;Cannot load optional framework class: &quot; + PERSISTENCE_ANNOTATION_PROCESSOR_CLASS_NAME, ex);
+            }
+            def.setSource(source);
+            beanDefs.add(registerPostProcessor(registry, def, PERSISTENCE_ANNOTATION_PROCESSOR_BEAN_NAME));
+        }
+
+        if (!registry.containsBeanDefinition(EVENT_LISTENER_PROCESSOR_BEAN_NAME)) {
+            RootBeanDefinition def = new RootBeanDefinition(EventListenerMethodProcessor.class);
+            def.setSource(source);
+            beanDefs.add(registerPostProcessor(registry, def, EVENT_LISTENER_PROCESSOR_BEAN_NAME));
+        }
+
+        if (!registry.containsBeanDefinition(EVENT_LISTENER_FACTORY_BEAN_NAME)) {
+            RootBeanDefinition def = new RootBeanDefinition(DefaultEventListenerFactory.class);
+            def.setSource(source);
+            beanDefs.add(registerPostProcessor(registry, def, EVENT_LISTENER_FACTORY_BEAN_NAME));
+        }
+
+        return beanDefs;
+    }
+
+    private static BeanDefinitionHolder registerPostProcessor(
+            BeanDefinitionRegistry registry, RootBeanDefinition definition, String beanName) {
+
+        definition.setRole(BeanDefinition.ROLE_INFRASTRUCTURE);
+        registry.registerBeanDefinition(beanName, definition);
+        return new BeanDefinitionHolder(definition, beanName);
+    }
+
+}
+</code></pre>
+<p>5个RootBeanDefinition</p>
+<pre><code class="language-text">ConfigurationClassPostProcessor
+AutowiredAnnotationBeanPostProcessor
+CommonAnnotationBeanPostProcessor
+EventListenerProcessor
+EventListenerFactory
+</code></pre>
         </article>
     </div>
 </main>
 
-<!-- 右侧悬浮二级标题导航 - 始终显示 -->
-<!--  <aside id="right-sidebar" class="scrollbar-hide">-->
-<!--    <h3 class="toc-title">目录导航</h3>-->
-<!--    <nav class="toc-nav space-y-1">-->
-<!--      <a href="/sprdoc/view/sprival/README.html" class="toc-link">1. 快速开始</a>-->
-<!--      <a href="#section-1-1" class="toc-link toc-level-2">1.1 Web开发的定义与重要性</a>-->
-<!--      <a href="/sprdoc/view/sprival/spring-myql/README.html" class="toc-link">2. 数据库</a>-->
-<!--    </nav>-->
-<!--  </aside>-->
 
 <script>
     // 元素获取
