--- a/view/blog/spring/spring-mysql/mybatis-plus/Mapper.html
+++ b/view/blog/spring/spring-mysql/mybatis-plus/Mapper.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprival</title>
+    <title>Blog</title>
 
     <style>
         /* 基础样式与变量定义 */
@@ -790,81 +790,196 @@
         <!-- 左侧Logo -->
         <div class="flex items-center space-x-4">
             <a href="#" class="logo">
-                <span>SPRIVAL</span>
+                <span>Blog</span>
             </a>
         </div>
 
         <!-- 中间导航链接 -->
         <nav class="md:flex items-center space-x-6">
+
         </nav>
 
         <!-- 右侧功能区 -->
         <div class="flex items-center space-x-4">
-            <a href="/sprdoc/blog_index.html" class="nav-link active">Blog</a>
-            <a href="https://github.com/soyokra/sprival" class="nav-link active">Github</a>
+            <a href="/sprdoc/index.html" class="nav-link active">Sprival</a>
         </div>
     </div>
 </header>
-
-<!-- 左侧固定章节导航 - 始终显示 -->
-<aside id="left-sidebar" class="overflow-y-auto scrollbar-hide">
-    <div class="p-4">
-        <h2 class="chapter-title mb-4">Sprival</h2>
-        <nav class="space-y-1">
-            <a href="/sprdoc/view/sprival/README.html" class="chapter-link">
-                <span>快速开始</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-server/README.html" class="chapter-link">
-                <span>HTTP 服务端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-client/README.html" class="chapter-link">
-                <span>HTTP 客户端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-mysql/README.html" class="chapter-link">
-                <span>数据库</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-rabbit/README.html" class="chapter-link">
-                <span>RabbitMQ</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-kafka/README.html" class="chapter-link">
-                <span>Kafka</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-mongo/README.html" class="chapter-link">
-                <span>MongoDB</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-ealsticsearch/README.html" class="chapter-link">
-                <span>Elasticsearch</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-clickhouse/README.html" class="chapter-link">
-                <span>Clickhouse</span>
-            </a>
-        </nav>
-    </div>
-</aside>
 
 <!-- 主内容区 -->
 <main class="main-content">
     <div class="container max-w-4xl">
         <article class="markdown-content bg-white rounded-lg shadow p-6 md:p-8">
-            <h1>快速开始</h1>
+            <h1>Mapper</h1>
+<p>mybatis通常的用法如下：</p>
+<p>定义接口</p>
+<pre><code class="language-java">public interface UserMapper {
+    User selectUser(int id);
+}
+</code></pre>
+<p>定义xml文件</p>
+<pre><code class="language-xml">&lt;mapper namespace=&quot;com.example.UserMapper&quot;&gt;
+    &lt;select id=&quot;selectUser&quot; parameterType=&quot;int&quot; resultType=&quot;User&quot;&gt;
+        SELECT * FROM users WHERE id = #{id}
+    &lt;/select&gt;
+&lt;/mapper&gt;
+</code></pre>
+<p>执行</p>
+<pre><code class="language-java">class Test {
+    public static void main(String[] args) {
+        try (SqlSession session = sqlSessionFactory.openSession()) {
+            UserMapper mapper = session.getMapper(UserMapper.class);
+            User user = mapper.selectUser(1);
+            System.out.println(user);
+        } catch(Exception e) {
+            e.printStackTrace();
+        }
+    }
+}
+</code></pre>
+<ul>
+<li>这里的UserMapper实现实际上是一个代理MapperProxy。这种方式简单来说就是，定义接口，调用接口方法的时候，通过代理方式处理接口实现</li>
+<li>集成到spring的时候，需要将项目中定义的所有Mapper转换为Proxy，并且注册为Bean。</li>
+<li>mybatis通过MapperScan注解扫描mapper接口，注册为bean的时候的是FactoryBean模式将实现类转换为MapperProxy代理，</li>
+<li>对于mybatis-plus来说，通过注册SqlSessionTemplate这个bean，将MapperProxy代理替换成自己的MybatisMapperProxy代理</li>
+</ul>
+<h2>主要的调用链路</h2>
+<pre><code class="language-text">@MapperScan(&quot;com.soyokra.sprival.dao.*.mapper&quot;)
+=&gt; MapperScan @Import({MapperScannerRegistrar.class})：注册MapperScannerRegistrar
+=&gt; MapperScannerRegistrar.registerBeanDefinitions：设置MapperScannerConfigurer属性的basePackage为com.soyokra.sprival.dao.*.mapper
+=&gt; MapperScannerConfigurer.postProcessBeanDefinitionRegistry
+=&gt; ClassPathMapperScanner.processBeanDefinitions：扫描basePackage生成BeanDefinition，并且设置BeanClass为MapperFactoryBean
+=&gt; Mapper注册为Bean的时候，通过MapperFactoryBean的getObject()转到了SqlSessionTemplate.getMapper()
+=&gt; SqlSessionTemplate调用的是 getConfiguration().getMapper(type, this)。这个SqlSessionTemplate是mybatis-plus注册的Bean，Configuration是mybatis-plus的
+=&gt; 最终通过mybatis-plus的MybatisMapperRegistry执行到MybatisMapperProxyFactory，生成了MybatisMapperProxy代理类作为Mapper接口的实现
+</code></pre>
+<h2>MapperScan</h2>
+<p>@MapperScan("com.soyokra.sprival.dao.<em>.mapper")设置了需要扫描的包basePackages为"com.soyokra.sprival.dao.</em>.mapper"</p>
+<pre><code class="language-java">@MapperScan(&quot;com.soyokra.sprival.dao.*.mapper&quot;)
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.TYPE)
+@Documented
+@Import(MapperScannerRegistrar.class)
+@Repeatable(MapperScans.class)
+public @interface MapperScan {
+    String[] value() default {};
+}
+</code></pre>
+<h2>MapperScannerRegistrar</h2>
+<ul>
+<li>MapperScan注解本身注解了@Import({MapperScannerRegistrar.class})</li>
+<li>MapperScannerRegistrar这个类实现了接口ImportBeanDefinitionRegistrar</li>
+<li>通过registerBeanDefinitions方法注册MapperScannerConfigurer这个类的BeanDefinition的时候， 把MapperScan注解设置需要扫描的包设置到了MapperScannerConfigurer这个类的属性basePackages</li>
+</ul>
+<pre><code class="language-java">public class MapperScannerRegistrar implements ImportBeanDefinitionRegistrar, ResourceLoaderAware {
+    void registerBeanDefinitions(AnnotationMetadata annoMeta, AnnotationAttributes annoAttrs,
+                                 BeanDefinitionRegistry registry, String beanName) {
+
+        BeanDefinitionBuilder builder = BeanDefinitionBuilder.genericBeanDefinition(MapperScannerConfigurer.class);
+
+        builder.addPropertyValue(&quot;basePackage&quot;, StringUtils.collectionToCommaDelimitedString(basePackages));
+
+        registry.registerBeanDefinition(beanName, builder.getBeanDefinition());
+
+    }
+}
+</code></pre>
+<h2>MapperScannerConfigurer</h2>
+<ul>
+<li>MapperScannerConfigurer这个类实现了BeanDefinitionRegistryPostProcessor的接口</li>
+<li>在postProcessBeanDefinitionRegistry方法里实例化了ClassPathMapperScanner，通过ClassPathMapperScanner进行类文件扫描和BeanDefinition的注册</li>
+</ul>
+<pre><code class="language-java">public class MapperScannerConfigurer 
+        implements BeanDefinitionRegistryPostProcessor, InitializingBean, ApplicationContextAware, BeanNameAware {
+    @Override
+    public void postProcessBeanDefinitionRegistry(BeanDefinitionRegistry registry) {
+        ClassPathMapperScanner scanner = new ClassPathMapperScanner(registry);
+        scanner.setMapperFactoryBeanClass(this.mapperFactoryBeanClass);
+        scanner.scan(StringUtils.tokenizeToStringArray(this.basePackage, ConfigurableApplicationContext.CONFIG_LOCATION_DELIMITERS));
+    }
+}
+</code></pre>
+<h2>ClassPathMapperScanner</h2>
+<p>对basePackages下的文件进行扫描注册成BeanDefinition，并且设置了BeanDefinition的属性beanClass为MapperFactoryBean</p>
+<pre><code class="language-java">public class ClassPathMapperScanner extends ClassPathBeanDefinitionScanner {
+    @Override
+    public Set&lt;BeanDefinitionHolder&gt; doScan(String... basePackages) {
+        Set&lt;BeanDefinitionHolder&gt; beanDefinitions = super.doScan(basePackages);
+        processBeanDefinitions(beanDefinitions);
+        return beanDefinitions;
+    }
+
+    private void processBeanDefinitions(Set&lt;BeanDefinitionHolder&gt; beanDefinitions) {
+        AbstractBeanDefinition definition;
+        BeanDefinitionRegistry registry = getRegistry();
+        for (BeanDefinitionHolder holder : beanDefinitions) {
+            definition = (AbstractBeanDefinition) holder.getBeanDefinition();
+            definition.setBeanClass(this.mapperFactoryBeanClass); // this.mapperFactoryBeanClass =&gt; MapperFactoryBean
+        }
+    }
+}
+</code></pre>
+<h2>MapperFactoryBean</h2>
+<ul>
+<li>MapperFactoryBean实现了FactoryBean接口</li>
+<li>Spring将Mapper注册为Bean的时候，用的是MapperFactoryBean的getObject()，这个方法调用到了SqlSessionTemplate.getMapper()</li>
+</ul>
+<pre><code class="language-java">public class MapperFactoryBean&lt;T&gt; extends SqlSessionDaoSupport implements FactoryBean&lt;T&gt; {
+    @Override
+    public T getObject() throws Exception {
+        return getSqlSession().getMapper(this.mapperInterface);
+    }
+
+    public SqlSession getSqlSession() {
+        return this.sqlSessionTemplate;
+    }
+}
+
+public abstract class SqlSessionDaoSupport extends DaoSupport {
+    public SqlSession getSqlSession() {
+        return this.sqlSessionTemplate;
+    }
+}
+</code></pre>
+<h2>SqlSessionTemplate</h2>
+<p>SqlSessionTemplate调用的是 getConfiguration().getMapper(type, this)。由于这个SqlSessionTemplate是mybatis-plus注册的Bean，Configuration实际上是mybatis-plus
+实现的，最终最终通过mybatis-plus的MybatisMapperRegistry执行到MybatisMapperProxyFactory，生成了MybatisMapperProxy代理类作为Mapper接口的实现</p>
+<pre><code class="language-java">public class SqlSessionTemplate implements SqlSession, DisposableBean {
+    @Override
+    public &lt;T&gt; T getMapper(Class&lt;T&gt; type) {
+        return getConfiguration().getMapper(type, this);
+    }
+
+    @Override
+    public Configuration getConfiguration() {
+        return this.sqlSessionFactory.getConfiguration();
+    }
+}
+</code></pre>
+<h2>MybatisPlusAutoConfiguration</h2>
+<p>mybatis-plus注册SqlSessionFactory 和 SqlSessionTemplate bean</p>
+<pre><code class="language-java">public class MybatisPlusAutoConfiguration implements InitializingBean {
+
+    @Bean
+    @ConditionalOnMissingBean
+    public SqlSessionFactory sqlSessionFactory(DataSource dataSource) throws Exception {
+        MybatisSqlSessionFactoryBean factory = new MybatisSqlSessionFactoryBean();
+        factory.setDataSource(dataSource);
+        return factory.getObject();
+    }
+
+    @Bean
+    @ConditionalOnMissingBean
+    public SqlSessionTemplate sqlSessionTemplate(SqlSessionFactory sqlSessionFactory) {
+        ExecutorType executorType = this.properties.getExecutorType();
+        return executorType != null ? new SqlSessionTemplate(sqlSessionFactory, executorType) : new SqlSessionTemplate(sqlSessionFactory);
+    }
+}
+</code></pre>
         </article>
     </div>
 </main>
 
-<!-- 右侧悬浮二级标题导航 - 始终显示 -->
-<!--  <aside id="right-sidebar" class="scrollbar-hide">-->
-<!--    <h3 class="toc-title">目录导航</h3>-->
-<!--    <nav class="toc-nav space-y-1">-->
-<!--      <a href="/sprdoc/view/sprival/README.html" class="toc-link">1. 快速开始</a>-->
-<!--      <a href="#section-1-1" class="toc-link toc-level-2">1.1 Web开发的定义与重要性</a>-->
-<!--      <a href="/sprdoc/view/sprival/spring-myql/README.html" class="toc-link">2. 数据库</a>-->
-<!--    </nav>-->
-<!--  </aside>-->
 
 <script>
     // 元素获取
