--- a/view/blog/clickhouse/README.html
+++ b/view/blog/clickhouse/README.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprival</title>
+    <title>Blog</title>
 
     <style>
         /* 基础样式与变量定义 */
@@ -790,81 +790,116 @@
         <!-- 左侧Logo -->
         <div class="flex items-center space-x-4">
             <a href="#" class="logo">
-                <span>SPRIVAL</span>
+                <span>Blog</span>
             </a>
         </div>
 
         <!-- 中间导航链接 -->
         <nav class="md:flex items-center space-x-6">
+
         </nav>
 
         <!-- 右侧功能区 -->
         <div class="flex items-center space-x-4">
-            <a href="/sprdoc/blog_index.html" class="nav-link active">Blog</a>
-            <a href="https://github.com/soyokra/sprival" class="nav-link active">Github</a>
+            <a href="/sprdoc/index.html" class="nav-link active">Sprival</a>
         </div>
     </div>
 </header>
-
-<!-- 左侧固定章节导航 - 始终显示 -->
-<aside id="left-sidebar" class="overflow-y-auto scrollbar-hide">
-    <div class="p-4">
-        <h2 class="chapter-title mb-4">Sprival</h2>
-        <nav class="space-y-1">
-            <a href="/sprdoc/view/sprival/README.html" class="chapter-link">
-                <span>快速开始</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-server/README.html" class="chapter-link">
-                <span>HTTP 服务端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-client/README.html" class="chapter-link">
-                <span>HTTP 客户端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-mysql/README.html" class="chapter-link">
-                <span>数据库</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-rabbit/README.html" class="chapter-link">
-                <span>RabbitMQ</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-kafka/README.html" class="chapter-link">
-                <span>Kafka</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-mongo/README.html" class="chapter-link">
-                <span>MongoDB</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-ealsticsearch/README.html" class="chapter-link">
-                <span>Elasticsearch</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-clickhouse/README.html" class="chapter-link">
-                <span>Clickhouse</span>
-            </a>
-        </nav>
-    </div>
-</aside>
 
 <!-- 主内容区 -->
 <main class="main-content">
     <div class="container max-w-4xl">
         <article class="markdown-content bg-white rounded-lg shadow p-6 md:p-8">
-            <h1>快速开始</h1>
+            <h2>服务端架构</h2>
+<p><img alt="图片替代文本" src="clickhouse-cluster.drawio.png" /></p>
+<p>clickhouse最简化的高可用架构是3节点1分片2副本。</p>
+<p>其中2个节点是数据节点。
+类似于双主，任一一个节点故障，另一个节点依然可以写入，并且有完整的数据提供查询。同时
+双节点可以均摊查询负载。</p>
+<p>3个节点都包含keeper，实现协调节点的高可用，并且避免脑裂问题。</p>
+<p>使用的时候，也不需要同时创建分布式表和本地表支持分布式查询。</p>
+<h3>配置示例</h3>
+<pre><code class="language-xml">&lt;clickhouse&gt;
+    &lt;remote_servers&gt;
+        &lt;cluster_1S_2R&gt;
+            &lt;shard&gt;
+                &lt;replica&gt;
+                    &lt;host&gt;chnode1.domain.com&lt;/host&gt;
+                    &lt;port&gt;9000&lt;/port&gt;
+                    &lt;user&gt;default&lt;/user&gt;
+                    &lt;password&gt;ClickHouse123!&lt;/password&gt;
+                &lt;/replica&gt;
+                &lt;replica&gt;
+                    &lt;host&gt;chnode2.domain.com&lt;/host&gt;
+                    &lt;port&gt;9000&lt;/port&gt;
+                    &lt;user&gt;default&lt;/user&gt;
+                    &lt;password&gt;ClickHouse123!&lt;/password&gt;
+                &lt;/replica&gt;
+            &lt;/shard&gt;
+        &lt;/cluster_1S_2R&gt;
+    &lt;/remote_servers&gt;
+&lt;/clickhouse&gt;
+
+&lt;keeper_server&gt;
+    &lt;tcp_port&gt;9181&lt;/tcp_port&gt;
+    &lt;server_id&gt;1&lt;/server_id&gt;
+    &lt;log_storage_path&gt;/var/lib/clickhouse/coordination/log&lt;/log_storage_path&gt;
+    &lt;snapshot_storage_path&gt;/var/lib/clickhouse/coordination/snapshots&lt;/snapshot_storage_path&gt;
+
+    &lt;coordination_settings&gt;
+        &lt;operation_timeout_ms&gt;10000&lt;/operation_timeout_ms&gt;
+        &lt;session_timeout_ms&gt;30000&lt;/session_timeout_ms&gt;
+        &lt;raft_logs_level&gt;warning&lt;/raft_logs_level&gt;
+    &lt;/coordination_settings&gt;
+
+    &lt;raft_configuration&gt;
+        &lt;server&gt;
+            &lt;id&gt;1&lt;/id&gt;
+            &lt;hostname&gt;chnode1.domain.com&lt;/hostname&gt;
+            &lt;port&gt;9234&lt;/port&gt;
+        &lt;/server&gt;
+        &lt;server&gt;
+            &lt;id&gt;2&lt;/id&gt;
+            &lt;hostname&gt;chnode2.domain.com&lt;/hostname&gt;
+            &lt;port&gt;9234&lt;/port&gt;
+        &lt;/server&gt;
+        &lt;server&gt;
+            &lt;id&gt;3&lt;/id&gt;
+            &lt;hostname&gt;chnode3.domain.com&lt;/hostname&gt;
+            &lt;port&gt;9234&lt;/port&gt;
+        &lt;/server&gt;
+    &lt;/raft_configuration&gt;
+&lt;/keeper_server&gt;
+
+&lt;zookeeper&gt;
+    &lt;node&gt;
+        &lt;host&gt;chnode1.domain.com&lt;/host&gt;
+        &lt;port&gt;9181&lt;/port&gt;
+    &lt;/node&gt;
+    &lt;node&gt;
+        &lt;host&gt;chnode2.domain.com&lt;/host&gt;
+        &lt;port&gt;9181&lt;/port&gt;
+    &lt;/node&gt;
+    &lt;node&gt;
+        &lt;host&gt;chnode3.domain.com&lt;/host&gt;
+        &lt;port&gt;9181&lt;/port&gt;
+    &lt;/node&gt;
+&lt;/zookeeper&gt;
+</code></pre>
+<h3>查看集群信息</h3>
+<pre><code class="language-sql">-- 查看集群信息
+select * from system.clusters;
+
+-- 查看表副本信息
+select * from system.replicas;
+
+-- 查看节点宏信息
+select * from system.macros;
+</code></pre>
         </article>
     </div>
 </main>
 
-<!-- 右侧悬浮二级标题导航 - 始终显示 -->
-<!--  <aside id="right-sidebar" class="scrollbar-hide">-->
-<!--    <h3 class="toc-title">目录导航</h3>-->
-<!--    <nav class="toc-nav space-y-1">-->
-<!--      <a href="/sprdoc/view/sprival/README.html" class="toc-link">1. 快速开始</a>-->
-<!--      <a href="#section-1-1" class="toc-link toc-level-2">1.1 Web开发的定义与重要性</a>-->
-<!--      <a href="/sprdoc/view/sprival/spring-myql/README.html" class="toc-link">2. 数据库</a>-->
-<!--    </nav>-->
-<!--  </aside>-->
 
 <script>
     // 元素获取
