--- a/view/blog/mongodb/README.html
+++ b/view/blog/mongodb/README.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprival</title>
+    <title>Blog</title>
 
     <style>
         /* 基础样式与变量定义 */
@@ -790,81 +790,68 @@
         <!-- 左侧Logo -->
         <div class="flex items-center space-x-4">
             <a href="#" class="logo">
-                <span>SPRIVAL</span>
+                <span>Blog</span>
             </a>
         </div>
 
         <!-- 中间导航链接 -->
         <nav class="md:flex items-center space-x-6">
+
         </nav>
 
         <!-- 右侧功能区 -->
         <div class="flex items-center space-x-4">
-            <a href="/sprdoc/blog_index.html" class="nav-link active">Blog</a>
-            <a href="https://github.com/soyokra/sprival" class="nav-link active">Github</a>
+            <a href="/sprdoc/index.html" class="nav-link active">Sprival</a>
         </div>
     </div>
 </header>
-
-<!-- 左侧固定章节导航 - 始终显示 -->
-<aside id="left-sidebar" class="overflow-y-auto scrollbar-hide">
-    <div class="p-4">
-        <h2 class="chapter-title mb-4">Sprival</h2>
-        <nav class="space-y-1">
-            <a href="/sprdoc/view/sprival/README.html" class="chapter-link">
-                <span>快速开始</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-server/README.html" class="chapter-link">
-                <span>HTTP 服务端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-client/README.html" class="chapter-link">
-                <span>HTTP 客户端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-mysql/README.html" class="chapter-link">
-                <span>数据库</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-rabbit/README.html" class="chapter-link">
-                <span>RabbitMQ</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-kafka/README.html" class="chapter-link">
-                <span>Kafka</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-mongo/README.html" class="chapter-link">
-                <span>MongoDB</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-ealsticsearch/README.html" class="chapter-link">
-                <span>Elasticsearch</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-clickhouse/README.html" class="chapter-link">
-                <span>Clickhouse</span>
-            </a>
-        </nav>
-    </div>
-</aside>
 
 <!-- 主内容区 -->
 <main class="main-content">
     <div class="container max-w-4xl">
         <article class="markdown-content bg-white rounded-lg shadow p-6 md:p-8">
-            <h1>快速开始</h1>
+            <h1>mongodb</h1>
+<h2>集群架构</h2>
+<ul>
+<li>副本集</li>
+<li>分片</li>
+</ul>
+<h3>三节点副本集</h3>
+<p>副本集的最小推荐架构</p>
+<p>要实现副本集的优势，副本集至少需要三个节点。三节点副本集可以具有三个数据承载节点（主节点-从节点-从节点）（推荐），如果情况（例如成本）禁止添加第三个数据承载节点，则可以是两个数据承载节点加一个仲裁节点（主节点-从节点-仲裁节点）</p>
+<h4>主节点以及两个从节点 (P-S-S)</h4>
+<p>具有三个存储数据的节点的副本集包含：
+- 一个主节点。
+- 两个从节点。两个从节点都可以在选举中成为主节点</p>
+<p><img alt="pss.png" src="pss.png" /></p>
+<p>除了主节点以外，这些部署还始终提供两个完整的数据集副本。这些副本集提供额外的容错和高可用性。如果主节点不可用，副本集将选择一个从节点以作为主节点并继续正常运行。旧的主节点在可用时重新加入副本集。</p>
+<p><img alt="pss2.png" src="pss2.png" /></p>
+<h4>主节点、从节点和仲裁节点 (P-S-A)</h4>
+<p>具有两个存储数据的节点的三节点副本集包含：
+- 一个主节点。
+- 一个从节点成员。从节点可以在选举中成为主节点。
+- 一个仲裁节点。仲裁节点仅在选举中投票。
+<img alt="psa.png" src="psa.png" /></p>
+<p>由于仲裁节点不持有数据副本，因此这些部署仅提供一份完整的数据副本。仲裁节点需要的资源更少，但冗余和容错能力也更为有限。</p>
+<p>不过，具有主节点、从节点和仲裁节点的部署可以确保在主节点或 从节点不可用时副本集仍然可用。如果主节点不可用，副本集将选择从节点以作为主节点。</p>
+<p><img alt="psa2.png" src="psa2.png" /></p>
+<blockquote>
+<p>参见文档: https://www.mongodb.com/zh-cn/docs/manual/core/replica-set-architecture-three-members/</p>
+</blockquote>
+<h3>分片集群</h3>
+<p>MongoDB 分片集群由以下组件构成：
+- 分片：每个分片都包含分片数据的一个子集。每个分片都必须作为一个副本集进行部署。
+- 使用 mongos 进行路由：mongos 充当查询路由器，在客户端应用程序和分片集群之间提供接口。
+- 配置服务器：配置服务器会存储集群的元数据和配置设置。配置服务器必须部署为副本集 (CSRS)。</p>
+<p><img alt="shard.png" src="shard.png" /></p>
+<blockquote>
+<p>参见文档：https://www.mongodb.com/zh-cn/docs/manual/core/sharded-cluster-components/</p>
+</blockquote>
+<h2>监控告警</h2>
         </article>
     </div>
 </main>
 
-<!-- 右侧悬浮二级标题导航 - 始终显示 -->
-<!--  <aside id="right-sidebar" class="scrollbar-hide">-->
-<!--    <h3 class="toc-title">目录导航</h3>-->
-<!--    <nav class="toc-nav space-y-1">-->
-<!--      <a href="/sprdoc/view/sprival/README.html" class="toc-link">1. 快速开始</a>-->
-<!--      <a href="#section-1-1" class="toc-link toc-level-2">1.1 Web开发的定义与重要性</a>-->
-<!--      <a href="/sprdoc/view/sprival/spring-myql/README.html" class="toc-link">2. 数据库</a>-->
-<!--    </nav>-->
-<!--  </aside>-->
 
 <script>
     // 元素获取
