--- a/view/blog/spring/spring-framework/src/AbstractApplicationContext.registerBeanPostProcessors.html
+++ b/view/blog/spring/spring-framework/src/AbstractApplicationContext.registerBeanPostProcessors.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprival</title>
+    <title>Blog</title>
 
     <style>
         /* 基础样式与变量定义 */
@@ -790,81 +790,125 @@
         <!-- 左侧Logo -->
         <div class="flex items-center space-x-4">
             <a href="#" class="logo">
-                <span>SPRIVAL</span>
+                <span>Blog</span>
             </a>
         </div>
 
         <!-- 中间导航链接 -->
         <nav class="md:flex items-center space-x-6">
+
         </nav>
 
         <!-- 右侧功能区 -->
         <div class="flex items-center space-x-4">
-            <a href="/sprdoc/blog_index.html" class="nav-link active">Blog</a>
-            <a href="https://github.com/soyokra/sprival" class="nav-link active">Github</a>
+            <a href="/sprdoc/index.html" class="nav-link active">Sprival</a>
         </div>
     </div>
 </header>
-
-<!-- 左侧固定章节导航 - 始终显示 -->
-<aside id="left-sidebar" class="overflow-y-auto scrollbar-hide">
-    <div class="p-4">
-        <h2 class="chapter-title mb-4">Sprival</h2>
-        <nav class="space-y-1">
-            <a href="/sprdoc/view/sprival/README.html" class="chapter-link">
-                <span>快速开始</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-server/README.html" class="chapter-link">
-                <span>HTTP 服务端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-http-client/README.html" class="chapter-link">
-                <span>HTTP 客户端</span>
-            </a>
-            <a href="/sprdoc/view/sprival/spring-mysql/README.html" class="chapter-link">
-                <span>数据库</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-rabbit/README.html" class="chapter-link">
-                <span>RabbitMQ</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-kafka/README.html" class="chapter-link">
-                <span>Kafka</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-mongo/README.html" class="chapter-link">
-                <span>MongoDB</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-ealsticsearch/README.html" class="chapter-link">
-                <span>Elasticsearch</span>
-            </a>
-
-            <a href="/sprdoc/view/sprival/spring-clickhouse/README.html" class="chapter-link">
-                <span>Clickhouse</span>
-            </a>
-        </nav>
-    </div>
-</aside>
 
 <!-- 主内容区 -->
 <main class="main-content">
     <div class="container max-w-4xl">
         <article class="markdown-content bg-white rounded-lg shadow p-6 md:p-8">
-            <h1>快速开始</h1>
+            <h2>简述</h2>
+<pre><code class="language-java">final class PostProcessorRegistrationDelegate {
+    public static void registerBeanPostProcessors(
+           ConfigurableListableBeanFactory beanFactory, AbstractApplicationContext applicationContext) {
+
+        String[] postProcessorNames = beanFactory.getBeanNamesForType(BeanPostProcessor.class, true, false);
+
+        // Register BeanPostProcessorChecker that logs an info message when
+        // a bean is created during BeanPostProcessor instantiation, i.e. when
+        // a bean is not eligible for getting processed by all BeanPostProcessors.
+        int beanProcessorTargetCount = beanFactory.getBeanPostProcessorCount() + 1 + postProcessorNames.length;
+        beanFactory.addBeanPostProcessor(new BeanPostProcessorChecker(beanFactory, beanProcessorTargetCount));
+
+        // Separate between BeanPostProcessors that implement PriorityOrdered,
+        // Ordered, and the rest.
+        List&lt;BeanPostProcessor&gt; priorityOrderedPostProcessors = new ArrayList&lt;&gt;();
+        List&lt;BeanPostProcessor&gt; internalPostProcessors = new ArrayList&lt;&gt;();
+        List&lt;String&gt; orderedPostProcessorNames = new ArrayList&lt;&gt;();
+        List&lt;String&gt; nonOrderedPostProcessorNames = new ArrayList&lt;&gt;();
+        for (String ppName : postProcessorNames) {
+           if (beanFactory.isTypeMatch(ppName, PriorityOrdered.class)) {
+              BeanPostProcessor pp = beanFactory.getBean(ppName, BeanPostProcessor.class);
+              priorityOrderedPostProcessors.add(pp);
+              if (pp instanceof MergedBeanDefinitionPostProcessor) {
+                 internalPostProcessors.add(pp);
+              }
+           }
+           else if (beanFactory.isTypeMatch(ppName, Ordered.class)) {
+              orderedPostProcessorNames.add(ppName);
+           }
+           else {
+              nonOrderedPostProcessorNames.add(ppName);
+           }
+        }
+
+        // First, register the BeanPostProcessors that implement PriorityOrdered.
+        sortPostProcessors(priorityOrderedPostProcessors, beanFactory);
+        registerBeanPostProcessors(beanFactory, priorityOrderedPostProcessors);
+
+        // Next, register the BeanPostProcessors that implement Ordered.
+        List&lt;BeanPostProcessor&gt; orderedPostProcessors = new ArrayList&lt;&gt;(orderedPostProcessorNames.size());
+        for (String ppName : orderedPostProcessorNames) {
+           BeanPostProcessor pp = beanFactory.getBean(ppName, BeanPostProcessor.class);
+           orderedPostProcessors.add(pp);
+           if (pp instanceof MergedBeanDefinitionPostProcessor) {
+              internalPostProcessors.add(pp);
+           }
+        }
+        sortPostProcessors(orderedPostProcessors, beanFactory);
+        registerBeanPostProcessors(beanFactory, orderedPostProcessors);
+
+        // Now, register all regular BeanPostProcessors.
+        List&lt;BeanPostProcessor&gt; nonOrderedPostProcessors = new ArrayList&lt;&gt;(nonOrderedPostProcessorNames.size());
+        for (String ppName : nonOrderedPostProcessorNames) {
+           BeanPostProcessor pp = beanFactory.getBean(ppName, BeanPostProcessor.class);
+           nonOrderedPostProcessors.add(pp);
+           if (pp instanceof MergedBeanDefinitionPostProcessor) {
+              internalPostProcessors.add(pp);
+           }
+        }
+        registerBeanPostProcessors(beanFactory, nonOrderedPostProcessors);
+
+        // Finally, re-register all internal BeanPostProcessors.
+        sortPostProcessors(internalPostProcessors, beanFactory);
+        registerBeanPostProcessors(beanFactory, internalPostProcessors);
+
+        // Re-register post-processor for detecting inner beans as ApplicationListeners,
+        // moving it to the end of the processor chain (for picking up proxies etc).
+        beanFactory.addBeanPostProcessor(new ApplicationListenerDetector(applicationContext));
+    }
+}
+</code></pre>
+<p>新注册了以下的BeanPostProcessor</p>
+<pre><code class="language-text">PostProcessorRegistrationDelegate$BeanPostProcessorChecker
+ConfigurationPropertiesBindingPostProcessor
+AnnotationAwareAspectJAutoProxyCreator
+RabbitConnectionFactoryMetricsPostProcessor
+DataSourceInitializerPostProcessor
+AsyncAnnotationBeanPostProcessor
+MethodValidationPostProcessor
+RabbitListenerAnnotationBeanPostProcessor
+PersistenceExceptionTranslationPostProcessor
+WebServerFactoryCustomizerBeanPostProcessor
+ErrorPageRegistrarBeanPostProcessor
+HealthEndpointConfiguration$HealthEndpointGroupsBeanPostProcessor
+MeterRegistryPostProcessor
+CommonAnnotationBeanPostProcessor
+AutowiredAnnotationBeanPostProcessor
+</code></pre>
+<p>之前就已经注册的BeanPostProcessor</p>
+<pre><code class="language-text">ApplicationContextAwareProcessor
+ApplicationListenerDetector
+WebApplicationContextServletContextAwareProcessor
+ConfigurationClassPostProcessor$ImportAwareBeanPostProcessor
+</code></pre>
         </article>
     </div>
 </main>
 
-<!-- 右侧悬浮二级标题导航 - 始终显示 -->
-<!--  <aside id="right-sidebar" class="scrollbar-hide">-->
-<!--    <h3 class="toc-title">目录导航</h3>-->
-<!--    <nav class="toc-nav space-y-1">-->
-<!--      <a href="/sprdoc/view/sprival/README.html" class="toc-link">1. 快速开始</a>-->
-<!--      <a href="#section-1-1" class="toc-link toc-level-2">1.1 Web开发的定义与重要性</a>-->
-<!--      <a href="/sprdoc/view/sprival/spring-myql/README.html" class="toc-link">2. 数据库</a>-->
-<!--    </nav>-->
-<!--  </aside>-->
 
 <script>
     // 元素获取
